--- a/wiki/MainPage.wiki
+++ b/wiki/MainPage.wiki
@@ -4,4 +4,5 @@
 
   * [GettingStarted Getting started] - system requirements, obtaining DKPro WSD, example code
   * [WSDCorpora List of WSD corpora] - information on common WSD data sets and where to obtain them
+  * [LSRs List of LSRs] - information on common WSD sense inventories and where to obtain them
   * [FAQ Frequently asked questions] - answers to common questions about DKPro WSD
