Edited wiki page MainPage through web user interface.

--- a/wiki/MainPage.wiki
+++ b/wiki/MainPage.wiki
@@ -6,3 +6,8 @@
   * [WSDCorpora List of WSD corpora] - information on common WSD data sets and where to obtain them
   * [LSRs List of LSRs] - information on common WSD sense inventories and where to obtain them
   * [FAQ Frequently asked questions] - answers to common questions about DKPro WSD
+
+
+== Miscellaneous pages ==
+
+  * [https://code.google.com/p/dkpro-wsd/w/list Index of all wiki pages]
